src/objects/Custom_Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Enable_Free_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>自由回答欄</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>質問</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>回答必須</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>セッション</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>カスタムアンケート 質問</relationshipLabel>
        <relationshipName>Custom_Survey_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>並び順</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>アンケートタイプ</label>
        <picklist>
            <picklistValues>
                <fullName>checkbox</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>カスタムアンケート 質問</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>CSQ-{00000000}</displayFormat>
        <label>質問番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>